--- a/MiPaladar/app.xaml
+++ b/MiPaladar/app.xaml
@@ -1,51 +1,39 @@
-﻿<Application x:Class="MiPaladar.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"             
-             xmlns:c="clr-namespace:System.Collections;assembly=mscorlib"
-             xmlns:s="clr-namespace:System;assembly=mscorlib"
-             
+<Application x:Class="MiPaladar.App" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:c="clr-namespace:System.Collections;assembly=mscorlib" 
+             xmlns:s="clr-namespace:System;assembly=mscorlib" 
              xmlns:conv="clr-namespace:MiPaladar.Converters"
-             
-             
-             Startup="Application_Startup">
+             xmlns:vm="clr-namespace:MiPaladar.ViewModels"
+             Startup="Application_Startup"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             d1p1:Ignorable="d" 
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
-
         <!--<ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/resources/MergedResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>-->
-
         <!--Converters-->
-
-        <BooleanToVisibilityConverter x:Key="btvConverter"/>
-
-        <conv:NegativeBooleanToVisibilityConverter x:Key="nbtvConverter"/>
-
+        <BooleanToVisibilityConverter x:Key="btvConverter" />
+        <conv:NegativeBooleanToVisibilityConverter x:Key="nbtvConverter" />
         <!--<conv:BooleanAorBToVisibilityConverter x:Key="AorBtvConverter"/>-->
-
-        <conv:LogicExpConverter x:Key="logicExpConverter"/>
-        <conv:LogicExpToVisibilityConverter x:Key="logicExptvConverter"/>
-
+        <conv:LogicExpConverter x:Key="logicExpConverter" />
+        <conv:LogicExpToVisibilityConverter x:Key="logicExptvConverter" />
         <!--<conv:NotAorBConverter x:Key="notAorBConverter"/>-->
-        <conv:NegativeBooleanConverter x:Key="negativeBooleanConv"/>
-
+        <conv:NegativeBooleanConverter x:Key="negativeBooleanConv" />
         <!--<conv:TableFormatterConverter x:Key="tableFormatter"/>-->
-
         <!--<conv:NameSubstringConverter x:Key="substringConv"/>-->
-
         <!--<conv:QuantityConverter x:Key="qttyConverter"/>-->
-
         <!--<conv:InventoryQuantityConverter x:Key="invQttyConverter"/>-->
-
-        <conv:UMFamilyTranslator x:Key="umFamilyTranslator"/>
-        <conv:ProductTypeInSpanishConverter x:Key="ptSpanishConverter"/>
-
-        <conv:NullImageConverter x:Key="imageSourceConverter"/>
-
-        <conv:NotSetDateConverter x:Key="dateNotSetConverter"/>
-
-        <conv:LevelToIndentConverter x:Key="levelToIndentConverter"/>
-
+        <conv:UMFamilyTranslator x:Key="umFamilyTranslator" />
+        <conv:ProductTypeInSpanishConverter x:Key="ptSpanishConverter" />
+        <conv:NullImageConverter x:Key="imageSourceConverter" />
+        <conv:NotSetDateConverter x:Key="dateNotSetConverter" />
+        <conv:LevelToIndentConverter x:Key="levelToIndentConverter" />
+        <!--<ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:MiPaladar.ViewModel" />
+        </ResourceDictionary>-->
     </Application.Resources>
 </Application>
